<resources>
    <string name="app_name">Sewa Vespa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_pesanan">Pesanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="splash_title1">Nikmati Liburan</string>
    <string name="splash_title2">Anda</string>
    <string name="splash_subtitle">Temukan vespa pilihanmu untuk temani liburanmu</string>
    <string name="splash_start">mulai</string>
    <string name="login_welcome1">Welcome Back!</string>
    <string name="login_welcome2">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Password Confirmation</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_acc">Create account</string>
    <string name="hello">Hello there!</string>
    <string name="lets">Create your account here</string>
    <string name="fullname">Fullname</string>
    <string name="tambah_motor">Masukkan Data Motor</string>
    <string name="nama_motor">Nama Motor</string>
    <string name="tahun_motor">Tahun Motor</string>
    <string name="harga_motor">Harga Motor</string>
    <string name="save">Save</string>
    <string name="action_logout">Log Out</string>


    <array name="metode_bayar">
        <item>Tunai</item>
        <item>Transfer</item>
    </array>
</resources>